Fix modal in the middle on mobile

--- a/src/pages/CartPage/components/CartPage/CartPage.scss
+++ b/src/pages/CartPage/components/CartPage/CartPage.scss
@@ -76,6 +76,10 @@
   align-items: center;
   gap: 16px;
 
+  position: fixed;
+  top: 40vh;
+  left: 1vw;
+
   &__text {
     text-align: center;
   }
